--- a/_News.scss
+++ b/_News.scss
@@ -4,8 +4,11 @@
     }
     .New {
         display: flex;
+        
         .new-title {
+            width: 20%;
             .new-title-all {
+                
             }
             .new-title01 {
             }
