--- a/_hamberger.scss
+++ b/_hamberger.scss
@@ -1,4 +1,5 @@
 @mixin hamberger() {
+
     // .hamburger {
     //     position: fixed;
     //     right: 10px;
@@ -17,11 +18,11 @@
     //         cursor: pointer;
     //     }
     // }
-    .decoration {
-        position: absolute;
-        border-left: 5px solid #0b6c6d;
-        font-size: 35px;
-    }
+    // .decoration {
+    //     position: absolute;
+    //     border-left: 5px solid #0b6c6d;
+    //     font-size: 35px;
+    // }
     .hamburger {
         padding: 10px;
         position: fixed;
@@ -35,11 +36,7 @@
         .ham-ani {
             width: 80px;
             height: 80px;
-            // padding: 10px;
-            // position: fixed;
-            // right: 10px;
-            // top: 10px;
-            // z-index: 20;
+            
             display: flex;
             flex-direction: column;
             align-items: center;
