--- a/_hamberger.scss
+++ b/_hamberger.scss
@@ -1,47 +1,23 @@
 @mixin hamberger() {
-
-    // .hamburger {
-    //     position: fixed;
-    //     right: 10px;
-    //     top: 10px;
-    //     z-index: 20;
-    //     width: auto;
-    //     padding: 10px;
-    //     height: 50px;
-    //     color: #0b6c6d;
-    //     line-height: 36px;
-    //     text-align: center;
-    //     font-size: 36px;
-
-    //     margin-bottom: 20px;
-    //     &:hover {
-    //         cursor: pointer;
-    //     }
-    // }
-    // .decoration {
-    //     position: absolute;
-    //     border-left: 5px solid #0b6c6d;
-    //     font-size: 35px;
-    // }
     .hamburger {
         padding: 10px;
         position: fixed;
         right: 10px;
         top: 10px;
-        z-index: 20;
+        z-index: 50;
         display: flex;
         flex-direction: column;
         justify-content: center;
-        
+
         .ham-ani {
             width: 80px;
             height: 80px;
-            
+
             display: flex;
             flex-direction: column;
             align-items: center;
             justify-content: center;
-            
+
             cursor: pointer;
             .stick {
                 width: 80px;
@@ -191,11 +167,11 @@
                 transform: translate(0, 0px);
             }
         }
-        .ham-menu{
+        .ham-menu {
             color: #0b6c6d;
             text-align: center;
             font-size: 20px;
-                       
+            font-family: "Fredericka the Great", cursive;
         }
     }
     .btn-groupxxx {
@@ -203,8 +179,8 @@
         width: 100%;
         height: 100vh;
         background-color: #efe5cb;
-        // opacity: 0.9;
-
+        opacity: 1;
+        z-index: 49;
         display: none;
         &.active {
             display: block;
@@ -235,6 +211,7 @@
                     font-size: 48px;
                     margin-bottom: 30px;
                     color: #595757;
+                    font-family: "Fredericka the Great", cursive;
                 }
                 .btn {
                     padding: 20px;
@@ -275,6 +252,7 @@
                     .en {
                         color: #d4a63f;
                         border: 1px solid #d4a63f;
+                        font-family: "Fredericka the Great", cursive;
                     }
                     .cn {
                         color: #595757;
