--- a/subtitle-r.scss
+++ b/subtitle-r.scss
@@ -1,3 +1,6 @@
+
+
+
 .subtitle {
   width: 35%;
   display: flex;
@@ -8,7 +11,7 @@
   animation: fadeIn 500ms reverse;
 }
 
-.gooey {
+.gooey-r {
   background-image: linear-gradient(120deg, #EFE5CB 0%, #B15821 100%);
   border-radius: 42% 58% 70% 30% / 45% 45% 55% 55%;
   width: 350px;
@@ -19,7 +22,7 @@
   will-change: border-radius;
 }
 
-.gooey:before, .gooey:after {
+.gooey-r:before, .gooey-r:after {
   /* content: '';  */
   width: 100%;
   height: 100%;
@@ -33,13 +36,13 @@
   background-image: linear-gradient(120deg, rgba(212, 166, 63, .55) 0%, #EFE5CB 100%);
 }
 
-.gooey:before {
+.gooey-r:before {
   animation: morph 3s linear infinite;
   opacity: .21;
   animation-duration: 1.5s;
 }
 
-.gooey:after {
+.gooey-r:after {
   animation: morph 3s linear infinite;
   animation-delay: 400ms;
   opacity: .89;
