--- a/TenDrum.css
+++ b/TenDrum.css
@@ -877,17 +877,149 @@ body {
   background-image: url("./img/關於背景1002試用-小-06_工作區域6.svg");
 }
 
-body {
-  background-color: #efe5cb;
-}
-
 .New {
+  width: 100%;
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
+  background-color: #efe5cb;
 }
 
 .New .new-title {
+  margin-left: 10px;
+  padding: 25px;
   width: 20%;
+}
+
+.New .new-title .new-title-all {
+  font-size: 54px;
+  font-weight: bold;
+  margin-bottom: 60px;
+}
+
+.New .new-title .new-title01 {
+  margin-top: 10%;
+  padding-left: 10px;
+  font-size: 26px;
+  color: #b15821;
+  border-bottom: 1px solid #b15821;
+}
+
+.New .new-title .new-title01:hover {
+  cursor: pointer;
+}
+
+.New .new-title .act {
+  border-bottom: none;
+  color: #231815;
+}
+
+.New .new-contexts {
+  width: 80%;
+  height: calc(100vh - 30px);
+}
+
+.New .new-contexts .new-context {
+  display: none;
+}
+
+.New .new-contexts .new-context .new-contain {
+  width: 100%;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -ms-flex-wrap: wrap;
+      flex-wrap: wrap;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+}
+
+.New .new-contexts .new-context .new-contain .fas.fa-circle {
+  font-size: 12px;
+  line-height: 100px;
+  color: #0b6c6d;
+  padding: 0 5px;
+}
+
+.New .new-contexts .new-context .new-contain .new-context-title {
+  width: 50%;
+  margin-bottom: 10%;
+  font-size: 36px;
+  font-weight: bold;
+  color: #3E3A39;
+  text-align: center;
+  border-bottom: 1px solid #727171;
+  height: 50px;
+}
+
+.New .new-contexts .new-context .new-contain .new-context-group {
+  width: 100%;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -ms-flex-wrap: wrap;
+      flex-wrap: wrap;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+}
+
+.New .new-contexts .new-context .new-contain .new-context-group .news {
+  height: auto;
+  padding: 25px;
+  margin: 1%;
+  width: calc(33.33% - 5%);
+  border: 1px solid #b15821;
+}
+
+.New .new-contexts .new-context .new-contain .new-context-group .news .new-img {
+  width: 90%;
+  margin-bottom: 10px;
+}
+
+.New .new-contexts .new-context .new-contain .new-context-group .news .new-time {
+  margin-bottom: 10px;
+  font-size: 14px;
+}
+
+.New .new-contexts .new-context .new-contain .new-context-group .news .new-name {
+  width: 90%;
+  font-size: 18px;
+}
+
+.New .new-contexts .new-context .new-contain .new-context-group .news .new-mores {
+  width: 90%;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: end;
+      -ms-flex-pack: end;
+          justify-content: flex-end;
+  -ms-flex-line-pack: end;
+      align-content: flex-end;
+  -webkit-box-align: end;
+      -ms-flex-align: end;
+          align-items: flex-end;
+}
+
+.New .new-contexts .new-context .new-contain .new-context-group .news .new-mores .new-more {
+  width: 30%;
+  font-family: "Fredericka the Great", cursive;
+  font-size: 20px;
+  color: #f7f8f8;
+  background: #b15821;
+  border-radius: 10px;
+  text-align: center;
+  height: 30px;
+  line-height: 30px;
+}
+
+.New .new-contexts .new-context .new-contain .new-context-group .news .new-mores .new-more:hover {
+  cursor: pointer;
+}
+
+.New .new-contexts .actt {
+  display: block;
 }
 /*# sourceMappingURL=TenDrum.css.map */
