--- a/_hamberger.scss
+++ b/_hamberger.scss
@@ -219,6 +219,7 @@
                     font-weight: bolder;
                     line-height: 50%;
                     text-align: center;
+                    border: 0;
 
                     &:hover {
                         background-color: #d4a63f;
